Fix stuck breadcrumbs nowrap rule
It's nowrap, not no-wrap.

--- a/static/css/mozsearch.css
+++ b/static/css/mozsearch.css
@@ -832,7 +832,7 @@ tr.after-context-line + tr.before-context-line {
   text-align: left;
 }
 .breadcrumbs.stuck {
-  white-space: no-wrap;
+  white-space: nowrap;
 }
 
 #tree-switcher {
